@@ -793,6 +793,7 @@
  ! API: new constructors for CGridPerspective and CWorkingPerspective
  ! API: more strict type checks when reading a layout, reading wrong types (like a CWorkingArea where a CGridArea was previously) will throw an exception.
  - Bugfix: divider on SplitDockStation could not be grabbed if the divider location was invalid (too big or too small).
+ ! API: removed obsolete interfaces ToolbarInterface and ToolbarElementInterface
    
 [Todo]
 - Drop StackDockStation over Dockable and merge them
